--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router": "^7.6.2",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
